--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.holder{
+  height:100vh;
+  width:100%;
+  display:flex;
+  align-items:center;
+  justify-content:center;	
+	
+}
+.item-1{
+	height:100px;
+	width:100px;
+	background-color:red;
+}
